[workspace]
members = [".", "crates/apiarist-testkit"]

[package]
name = "apiarist"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "The beekeeper who stress-tests your Swarm. Runs inside your enclave, not outside."
repository = "https://github.com/nxm-rs/apiarist"
keywords = ["swarm", "ethereum", "testing", "kurtosis", "beekeeper"]
categories = ["development-tools::testing"]

[dependencies]
# Internal crates
apiarist-testkit = { path = "crates/apiarist-testkit" }
nectar-primitives = { git = "https://github.com/nxm-rs/nectar", features = ["serde"] }

# External dependencies
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.8"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
hex = "0.4.3"
humantime-serde = "1.1"
once_cell = "1.21.3"
parking_lot = "0.12.5"
petgraph = "0.8.3"
prometheus = "0.14.0"
reqwest = { version = "0.12.26", features = ["json"] }
secp256k1 = { version = "0.31.1", features = ["recovery"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
strum = { version = "0.27", features = ["derive"] }
sha3 = "0.10.8"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
url = { version = "2.5.7", features = ["serde"] }
