[package]
name = "apiarist-testkit"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Test infrastructure and utilities for Swarm Bee testing"
repository = "https://github.com/nxm-rs/apiarist"
keywords = ["swarm", "ethereum", "testing", "utilities"]
categories = ["development-tools::testing"]

[dependencies]
# Random
rand = "0.9"

# Async
async-trait = "0.1"
tokio = { version = "1.48", features = ["sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1.48", features = ["full", "test-util"] }
